--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -20,6 +20,6 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <include layout="@layout/activity_main" />
+    <include layout="@layout/activity_maps" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
