--- a/app/src/main/res/menu/drawermenu.xml
+++ b/app/src/main/res/menu/drawermenu.xml
@@ -9,7 +9,7 @@
             android:icon="@drawable/ic_pin"/>
         <item
             android:id="@+id/nav_manual"
-            android:title="How to Use MapIT?"
+            android:title="How to Use T.I.Places?"
             android:icon="@drawable/ic_manual"/>
 
     </group>
